--- a/css/regle.css
+++ b/css/regle.css
@@ -82,16 +82,21 @@ footer {
     color: #ccc;
 }
 
-/* Media query for mobile devices */
+/* Media query pour telephone */
 @media (max-width: 768px) {
-    .navbar a {
-        font-size: 16px;
-        margin: 0 5px;
-    }
-
-    .navbar .nav-link:hover {
-        font-size: 18px;
-    }
+    .navbar {
+        flex-direction: column; 
+        align-items: center; 
+      }
+    
+      .navbar a {
+        width: 80%; 
+        text-align: center; 
+        padding: 8% 8%; 
+        border-radius: 2px;
+      }
+    
+    
 
     body::before {
         background-size: contain;
@@ -113,7 +118,8 @@ footer {
     }
 }
 
-/* Media query for tablets */
+
+/* Media query pour tablette */
 @media (min-width: 769px) and (max-width: 1024px) {
     .navbar a {
         font-size: 17px;
