--- a/css/singe_player.css
+++ b/css/singe_player.css
@@ -460,69 +460,60 @@ footer {
 {
   display: none;
 }
-/* Media query pour mobile */
+/* Media query pour telephone */
 @media (max-width: 768px) {
+  .navbar {
+    flex-direction: column; 
+    align-items: center; 
+  }
+
+  .navbar a {
+    width: 80%; 
+    text-align: center; 
+    padding: 8% 8%; 
+    border-radius: 2px;
+  }
+
   .game-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
-    padding: 5px;
-    margin: 0 auto;
-    overflow-x: hidden;
-  }
-
-  .game-grid {
-    width: 90vw;
-    height: 90vw;
-    max-width: 350px;
-    max-height: 350px;
-    margin: 10px auto;
-    transform: scale(0.95);
-  }
-
-  .ship-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 15px;
+    width: 100% ;
+    height: 1%;
     padding: 10px;
-    margin-top: 20px;
+    margin: 1% 1%;
+    max-height: 1%;
+    overflow-y: auto;
+    
   }
-
-  .ship {
-    transform: scale(0.85);
-    margin: 5px 0;
-  }
-
-  .start-button, 
-  .ship-button, 
-  .reset {
-    width: auto;
+  .btn {
+    width: 30%;
     max-width: none;
     font-size: 14px;
-    padding: 10px;
-    margin: 5px;
+    padding: 10% 10%;
+    margin: 1% 1%; 
     display: inline-block;
     text-align: center;
-    border-radius: 5px;
+    border-radius: 2px; 
+  }
+  body::before {
+    background-size: contain;
+    filter: blur(5px);
   }
 
-  .button-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    flex-wrap: wrap;
-    margin: 20px 0;
-  }
-  
 }
 /* Media query pour tablette */
 @media (min-width: 769px) and (max-width: 1024px) {
   .game-container {
-    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 1px;
+    padding: 10px;
+    margin: 1% 1%;
+    max-height: 80vh;
+    overflow-y: auto;
   }
 
   .game-grid {
@@ -533,10 +524,19 @@ footer {
   .ship-container {
     gap: 15px;
   }
-
-  .start-button, .ship-button {
-    width: auto;
-    min-width: 180px;
-    font-size: 15px;
+  .btn {
+    width: 30%;
+    max-width: none;
+    font-size: 80px;
+    padding: 20% 20%;
+    margin: 1% 1%; 
+    display: inline-block;
+    text-align: center;
+    border-radius: 10px; 
   }
+  body::before {
+    background-size: contain;
+    filter: blur(5px);
+  }
+ 
 }
