--- a/css/single_player.css
+++ b/css/single_player.css
@@ -499,6 +499,19 @@ footer {
 #info label {
   margin-bottom: 10px;
 }
+/* centrage bouton start rotate et drop */
+.setup-buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px; /* Ajoute de l'espace entre les boutons */
+}
+
+.setup-buttons .btn {
+  text-align: center;
+}
+
 /* Media query pour telephone */
 @media (max-width: 768px) {
   .navbar {
