--- a/css/single_player.css
+++ b/css/single_player.css
@@ -169,7 +169,7 @@ footer {
   background-color: hsl(232, 76%, 41%); /* Couleur de fond au survol */
   color: #ccc; /* Couleur du texte légèrement grisée au survol */
 }
-.setup-buttons {
+#setup-buttons {
   display: flex;
   flex-direction: column;
   align-items: center;
