--- a/css/single_player.css
+++ b/css/single_player.css
@@ -154,14 +154,15 @@ footer {
   border-radius: .2em;
   color: white;
   text-align: center;
-  align-items: center;
-  justify-content: center;
 }
 /* Boutons avec texte blanc */
 #setup-buttons .btn {
   color: white; /* Couleur du texte en blanc */
   border: none; /* Supprime les bordures si elles existent */
   transition: all 0.3s ease-in-out; /* Transition fluide pour les effets de survol */
+  border: none;
+  cursor: pointer;
+  text-align: center;
   
 }
 
@@ -169,6 +170,7 @@ footer {
 #setup-buttons .btn:hover {
   background-color: hsl(232, 76%, 41%); /* Couleur de fond au survol */
   color: #ccc; /* Couleur du texte légèrement grisée au survol */
+  
 }
 
 .splash-btn {
