--- a/css/single_player.css
+++ b/css/single_player.css
@@ -153,7 +153,7 @@ footer {
   cursor: pointer;
   border-radius: .2em;
   color: white;
-  text-align: center;
+  
 }
 /* Boutons avec texte blanc */
 #setup-buttons .btn {
@@ -161,8 +161,7 @@ footer {
   border: none; /* Supprime les bordures si elles existent */
   transition: all 0.3s ease-in-out; /* Transition fluide pour les effets de survol */
   border: none;
-  cursor: pointer;
-  text-align: center;
+  width: 180px;
   
 }
 
@@ -533,23 +532,37 @@ footer {
     
   }
   .btn {
-    width: 30%;
-    max-width: none;
-    font-size: 14px;
-    padding: 10% 10%;
-    margin: 1% 1%; 
-    display: inline-block;
-    text-align: center;
-    border-radius: 2px; 
+    font-size: 1%;
+    display: contents;
+    align-self: center;
+    width : 50%;
+  }
+  #setup-buttons .btn {
+    width: 31.9% ;
+    font-size: 49.5%;
   }
   body::before {
     background-size: contain;
-    filter: blur(5px);
+    filter: blur(10px);
+  }
+  
+  #info label {
+    margin-bottom: 10px;
+    font-size :80% ;
   }
 
 }
 /* Media query pour tablette */
 @media (min-width: 769px) and (max-width: 1024px) {
+  .navbar a {
+    font-size: 17px;
+    margin: 0 8px;
+  }
+
+  .navbar .nav-link:hover {
+    font-size: 19px;
+  }
+
   .game-container {
     display: flex;
     flex-direction: column;
@@ -570,19 +583,27 @@ footer {
   .ship-container {
     gap: 15px;
   }
-  .btn {
-    width: 30%;
-    max-width: none;
-    font-size: 80px;
-    padding: 20% 20%;
-    margin: 1% 1%; 
-    display: inline-block;
-    text-align: center;
-    border-radius: 10px; 
-  }
   body::before {
     background-size: contain;
-    filter: blur(5px);
+    filter: blur(20px);
+  }
+  .btn {
+    cursor: pointer;
+    border-radius: .2em;
+    color: white;
+    font-size: 14px;
+    padding: 10% 10%;
+    margin: 1% 1.19%; 
+    
+  }
+  
+  #setup-buttons .btn {
+    color: white; /* Couleur du texte en blanc */
+    border: none; /* Supprime les bordures si elles existent */
+    transition: all 0.3s ease-in-out; /* Transition fluide pour les effets de survol */
+    border: none;
+    width: 30%;
+    
   }
  
 }
